--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "~4.16.0",
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
+    "jsonwebtoken": "^8.3.0",
     "morgan": "~1.9.0",
     "sequelize": "^4.38.0",
     "sqlite3": "^4.0.2"
